--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="https://freedom3725.github.io/chill/">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://freedom3725.github.io/greenline/">路線</a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://freedom3725.github.io/brownline/">路線</a></li>
 						<li class="nav-item"><a class="nav-link" href="https://freedom3725.github.io/chill-style/">風格</a></li>
 						<li class="nav-item"><a class="nav-link" href="https://freedom3725.github.io/chill/#signup">Contact</a></li>
                     </ul>
@@ -45,13 +45,16 @@
                         <figure class="mb-4"><img class="img-fluid rounded mb-4 mb-lg-0" src="assets/1.jpg" alt="..." /></figure>
                         <!-- Post content-->
                         <section class="mb-5">
-                            <p class="fs-5 mb-4">Science is an enterprise that should be cherished as an activity of the free human mind. Because it transforms who we are, how we live, and it gives us an understanding of our place in the universe.</p>
-                            <p class="fs-5 mb-4">The universe is large and old, and the ingredients for life as we know it are everywhere, so there's no reason to think that Earth would be unique in that regard. Whether of not the life became intelligent is a different question, and we'll see if we find that.</p>
-                            <p class="fs-5 mb-4">If you get asteroids about a kilometer in size, those are large enough and carry enough energy into our system to disrupt transportation, communication, the food chains, and that can be a really bad day on Earth.</p>
-                            <h2 class="fw-bolder mb-4 mt-5">I have odd cosmic thoughts every day</h2>
-                            <p class="fs-5 mb-4">For me, the most fascinating interface is Twitter. I have odd cosmic thoughts every day and I realized I could hold them to myself or share them with people who might be interested.</p>
-                            <p class="fs-5 mb-4">Venus has a runaway greenhouse effect. I kind of want to know what happened there because we're twirling knobs here on Earth without knowing the consequences of it. Mars once had running water. It's bone dry today. Something bad happened there as well.</p>
-                        </section>
+                            <p>想找大安站附近不限時的咖啡廳？鈾咖啡餐酒館是唯一的答案！得到的答案永遠是：鈾咖啡餐酒館！終於找到入口啦！入口處充滿植物，只有小小一個黑色的圓型招牌雖然很像後門，但這裡就是前門無誤喔！</p>
+							<div><img class="img-fluid rounded mb-4 mb-lg-0" src="assets/2.jpg" alt="..." width="800"></div>
+							<p>除了門口種滿植物，半露天的室內也是不少花花草草，這兒也是有座位的呢！紅磚牆、花朵和藤蔓等很好拍，其實室內有很多老東西可以拍
+                            <div><img class="img-fluid rounded mb-4 mb-lg-0" src="assets/3.jpg" alt="..." width="800"></div>
+							<p>店內中心環繞個工作區和吧檯，夜晚時分很適合坐在這，多處沙發座位、甚至還有個室外小秘境，不管坐在哪裡都非常好拍照，同時提供無線網路wifi、免費插座，是一間可以久坐、聊天的不限時咖啡店</p>
+							<div><img class="img-fluid rounded mb-4 mb-lg-0" src="assets/4.jpg" alt="..." width="800"></div>
+                            <p>最喜歡週末在咖啡廳看書、用電腦、發呆吃甜點度過一個悠閒的下午～這次難得找到一家人不會太多太吵、環境美、餐點也好吃的咖啡廳 Uranium Cafe 鈾咖啡整體來說我很喜歡鈾咖啡的蛋糕跟用餐環境～不管是一個人還是跟朋友約會都非常適合喲！</p>
+                            <div><img class="img-fluid rounded mb-4 mb-lg-0" src="assets/5.jpg" alt="..." width="800"></div>
+ 
+						</section>
                     </article>
                     <!-- Comments section-->
                     <section class="mb-5">
@@ -65,10 +68,20 @@
                                         <div class="fw-bold">店家資訊</div>
 										<!-- Child comment 1-->
                                         <div class="d-flex mt-4">
+                                            <div class="flex-shrink-0"><img src="assets/FB.svg" alt="lacation" width="40" height="40"></div>
+                                            <div class="ms-3">
+                                                <div class="fw-bold">網站</div>
+                                                Uranium Cafe 鈾咖啡餐酒館 →
+            <a href="https://www.facebook.com/UraniumTaipei/" target="_blank" rel="noopener noreferrer">網站</a>
+                                            </div>
+                                        </div>
+										<!-- Child comment 1-->
+                                        <div class="d-flex mt-4">
                                             <div class="flex-shrink-0"><img src="assets/location.svg" alt="lacation" width="40" height="40"></div>
                                             <div class="ms-3">
                                                 <div class="fw-bold">地址</div>
-                                                --地址--                                            
+                                                台北市大安區復興南路一段253巷32號1樓   
+                <a href="https://g.page/uraniumcafe?share">地圖</a>												
 											</div>
                                         </div>
 									    <!-- Child comment 2-->
@@ -76,7 +89,7 @@
                                         <div class="flex-shrink-0"><img src="assets/phone-call.svg" alt="call" width="40" height="40"></div>
                                         <div class="ms-3">
                                             <div class="fw-bold">電話</div>
-                                            --電話-- 
+                                            (02)2704 0066 
                                         </div>
                                     </div>
                                         <!-- Child comment 3-->
@@ -84,7 +97,7 @@
                                             <div class="flex-shrink-0"><img src="assets/clock.svg" alt="clock" width="40" height="40"></div>
                                             <div class="ms-3">
                                                 <div class="fw-bold">營業時間</div>
-                                                --時段--
+                                                週一-週日 12:00–21:00
                                             </div>
                                         </div>
 										<!-- Child comment 4-->
@@ -92,7 +105,7 @@
                                             <div class="flex-shrink-0"><img src="assets/money.svg" alt="cost" width="40" height="40"></div>
                                             <div class="ms-3">
                                                 <div class="fw-bold">消費事項</div>
-                                                --消費--
+                                                收10%服務費 每人低消一項餐點
                                             </div>
                                         </div>
                                     </div>
@@ -102,7 +115,8 @@
                                     <div class="flex-shrink-0"><img src="assets/warning.svg" alt="warning" width="50" height="50"></div>
                                     <div class="ms-3">
                                         <div class="fw-bold">注意!!!</div>
-                                        --注意--
+                                        有wifi、插座，用餐不限時
+										🍻喝酒不開車，開車不喝酒🚗
                                     </div>
                                 </div>
                             </div>
@@ -121,29 +135,12 @@
                         </div>
                     </div>
                     <!-- Categories widget-->
-                    <div class="card mb-4">
-                        <div class="card-header">Categories</div>
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col-sm-6">
-                                    <ul class="list-unstyled mb-0">
-                                        <li><a href="https://www.google.com/maps/place/Uranium+Cafe+%E9%88%BE%E5%92%96%E5%95%A1%E9%A4%90%E9%85%92%E9%A4%A8/@25.0372094,121.5442594,17.13z/data=!4m5!3m4!1s0x3442abd17ba55aab:0x994b55a06d2abe5a!8m2!3d25.0366945!4d121.5450305">行車路線</a></li>
-                                        <li><a href="">點餐</a></li>
-									</ul>
-                                </div>
-								<div class="col-sm-6">
-                                    <ul class="list-unstyled mb-0">
-                                        <li><a href="https://www.facebook.com/UraniumTaipei/">網站</a></li>
-										<li><a href="">致電</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                   
                     <!-- Side widget-->
                     <div class="card mb-4">
                         <div class="card-header">Side Widget</div>
                         <div class="card-body">鄰近大安站
+						<div><img class="img-fluid rounded mb-4 mb-lg-0" src="assets/6.jpg" alt="..." width="800"></div>
 						<a class="btn btn-primary" href="https://www.metro.taipei/cp.aspx?n=ECEADC266D7120A7">乘車時間</a></div>
                     </div>
                 </div>
