--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                             <!-- Post categories-->
                         </header>
                         <!-- Preview image figure-->
-                        <figure class="mb-4"><img class="img-fluid rounded mb-4 mb-lg-0" src="assets/1.jpg" alt="..." /></figure>
+                        <figure class="mb-4"><img class="img-fluid rounded mb-4 mb-lg-0" src="assets/1.jpg" alt="..." width="800" /></figure>
                         <!-- Post content-->
                         <section class="mb-5">
                             <p>想找大安站附近不限時的咖啡廳？鈾咖啡餐酒館是唯一的答案！得到的答案永遠是：鈾咖啡餐酒館！終於找到入口啦！入口處充滿植物，只有小小一個黑色的圓型招牌雖然很像後門，但這裡就是前門無誤喔！</p>
