--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                             <!-- Post title-->
                             <h1 class="fw-bolder mb-1">Uranium Cafe 鈾咖啡</h1>
                             <!-- Post meta content-->
-                            <div class="text-muted fst-italic mb-2">餐酒館 · 咖啡館 · 複合式</div>
+                            <div class="text-muted fst-italic mb-2">餐酒館 · 複合式</div>
                             <!-- Post categories-->
                         </header>
                         <!-- Preview image figure-->
@@ -109,7 +109,7 @@
                                             <div class="flex-shrink-0"><img src="assets/money.svg" alt="cost" width="40" height="40"></div>
                                             <div class="ms-3">
                                                 <div class="fw-bold">消費事項</div>
-                                                收10%服務費 每人低消一項餐點
+                                                收10%服務費｜每人低消一項餐點
                                             </div>
                                         </div>
                                     </div>
@@ -119,7 +119,6 @@
                                     <div class="flex-shrink-0"><img src="assets/warning.svg" alt="warning" width="50" height="50"></div>
                                     <div class="ms-3">
                                         <div class="fw-bold">注意!!!</div>
-                                        有wifi、插座，用餐不限時
 										🍻喝酒不開車，開車不喝酒🚗
                                     </div>
                                 </div>
@@ -138,16 +137,8 @@
                             </div>
                         </div>
                     </div>
-                    <!-- Categories widget-->
-                   
                     <!-- Side widget-->
-                    <div class="card mb-4">
-<<<<<<< HEAD
                         <div class="card-header">Metro</div>
-                        <div class="card-body">鄰近大安站
-=======
-                        <div class="card-header">Side Widget</div>
->>>>>>> 88b59a433a17286dbfa3ef5ac01aebbe3235f247
 						<div><img class="img-fluid rounded mb-4 mb-lg-0" src="assets/6.jpg" alt="..." width="800"></div>
 						<div class="card-body">鄰近大安站
 						<a class="btn btn-primary" href="https://www.metro.taipei/cp.aspx?n=ECEADC266D7120A7">乘車時間</a></div>
